--- a/iTrusst/content_people.html
+++ b/iTrusst/content_people.html
@@ -1,5 +1,22 @@
-<center><h3 style="color:#6a3297">Planning working group</h3></center>
+<div class="row aln-center">
+  <div class="column"><a href="aboutus.html"><i style="margin-top:7px;" class="arrow left"></i></a></div>
+  <div class="column">
 
+<h3>Planning working group</h3>
+      </div>
+  <div class="column"><a href="aboutus.html"><i style="margin-top:7px;" class="arrow right"></i></a></div>
+    
+</div>
+
+<div class="row aln-center">
+    <a href="aboutus.html" class="buttonmenupeople">Reporting</a>
+    <a href="aboutus.html" class="buttonmenupeople">Safety</a>
+    <a href="aboutus.html" class="buttonmenupeople">Equipment</a>
+    <a href="aboutus.html" class="buttonmenupeople">Practice</a>
+    <a href="aboutus.html" class="buttonmenupeople">Open</a>
+    <a href="aboutus.html" class="buttonmenupeople">Clinical</a>
+    <a href="aboutus.html" class="buttonmenupeople">Observers</a>
+</div>
 
 <table id="customers" class="table-container fixed mostly-customized-scrollbar">
 
@@ -1060,3 +1077,4 @@
       </td>
   </tr>
 </table>
+      
