--- a/iTrusst/people.html
+++ b/iTrusst/people.html
@@ -26,7 +26,7 @@
                 <div id="main" class="wrapper style1">
                     <div class="container">
                         <header class="major">
-                            <h2>People</h2>
+                            <h2 class="peopletitle">People</h2>
                         </header>
 
                         <!-- Content -->
