--- a/iTrusst/content_index.html
+++ b/iTrusst/content_index.html
@@ -41,7 +41,7 @@
             <!-- The overview button -->
             <a class="profile" href="wg_safety.html">
                 <img alt="Profile shot" src="images/safety.jpg" />
-                <h2 class="profile__name gallerybutton">Safety</h2>
+                <h2 class="profile__name gallerybutton">Safetyyy</h2><br><h3>creds</h3>
             </a>
         </li>
         
