--- a/iTrusst/content_meetingmins.html
+++ b/iTrusst/content_meetingmins.html
@@ -15,6 +15,9 @@
 <h3>Previous meetings</h3>
 <ul>
     <li>
+        <a href="meeting_mei22.html">* Recording May, 2022</a>
+    </li>
+    <li>
         <a href="meeting_april22.html">* Minutes and recording April, 2022</a>
     </li>
     <li>
