--- a/iTrusst/content_recs_edu_course.html
+++ b/iTrusst/content_recs_edu_course.html
@@ -34,9 +34,7 @@
 <br><br>
 
 <h3>7. Safety</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/bF6tBjATfyE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br><br>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/r1hkWj59TwI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <h3>8. Study Design, Confounds, and Considerations</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/vc0O3i-Kz3Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
