--- a/iTrusst/content_people.html
+++ b/iTrusst/content_people.html
@@ -860,18 +860,21 @@
   <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Frederic Padilla</h4>
+        Observer<br>
         Research<br>
         Focused Ultrasound Foundation<br>
         USA
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Hermes Kamimura</h4>
+        Observer<br>
         Research<br>
         Columbia University<br>
         USA
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Jeff Keller</h4>
+        Observer<br>
         Industry<br>
         Electronics,<br>
         Innovation, Ltd.<br>
@@ -879,6 +882,7 @@
     </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Joel Segre</h4>
+        Observer<br>
         Research<br>
         X Company<br>
         USA
@@ -888,24 +892,28 @@
   <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>John Snell</h4>
+        Observer<br>
         Research<br>
         Focused Ultrasound Foundation<br>
         USA
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>John Rothwell</h4>
+        Observer<br>
         Research<br>
         University College London<br>
         UK
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Jonathan Hacker</h4>
+        Observer<br>
         Research<br>
         Rochester Institute of Technology<br>
         USA
     </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>José Pineda-Pardo</h4>
+        Observer<br>
         Research<br>
         hmCINAC<br>
         Spain
@@ -915,24 +923,28 @@
   <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Josh Cain</h4>
+        Observer<br>
         Research<br>
         University of California<br>
         USA
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Marc Fournelle</h4>
+        Observer<br>
         Research<br>
         The Fraunhofer Institute<br>
         Germany
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Marcus Kaiser</h4>
+        Observer<br>
         Research<br>
         University of Nottingham<br>
         UK
     </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Markus Ulsberg</h4>
+        Observer<br>
         Research<br>
         Otto-von-Guericke University<br> Magdeburg<br>
         Germany
@@ -942,24 +954,28 @@
   <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Mathieu Sprengers</h4>
+        Observer<br>
         Research<br>
         Ghent University<br>
         Belgium
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Mikhail Shapiro</h4>
+        Observer<br>
         Research<br>
         Caltech University<br>
         USA
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Noah Philip</h4>
+        Observer<br>
         Research<br>
         Brown University<br>
         USA
     </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Norman Spivak</h4>
+        Observer<br>
         Research<br>
         University of California<br>
         Los Angeles<br>
@@ -970,24 +986,28 @@
   <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Olivier Le Baron</h4>
+        Observer<br>
         Industry<br>
         Imasonic<br>
         France
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Philip Sabes</h4>
+        Observer<br>
         Industry<br>
         Neuralink<br>
         USA
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Peter Murphy</h4>
+        Observer<br>
         Research<br>
         Trinity College Dublin<br>
         Ireland
     </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Pierre Pouget</h4>
+        Observer<br>
         Research<br>
         National Centre for<br>
         Scientific Research<br>
@@ -998,6 +1018,7 @@
   <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Rob Mestrom</h4>
+        Observer<br>
         Research<br>
         Eindhoven University<br>
         of Technology<br>
@@ -1005,18 +1026,21 @@
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Ryan Jones</h4>
+        Observer<br>
         Research<br>
         Sunnybrook Research Institute<br>
         Canada
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Seiki Konishi</h4>
+        Observer<br>
         Research<br>
         Juntendo University<br>
         Japan
     </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Sjoerd Meijer</h4>
+        Observer<br>
         Research<br>
         Donders Institute,<br>
         Radboud University Nijmegen<br>
@@ -1027,6 +1051,7 @@
   <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Steffen Tretbar</h4>
+        Observer<br>
         Research<br>
         Fraunhofer Institute for<br>
         Biomedical Engineering<br>
@@ -1034,18 +1059,21 @@
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Susie LeBlang</h4>
+        Observer<br>
         Research<br>
         Focused Ultrasound Foundation<br>
         USA
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Tara Kugelman</h4>
+        Observer<br>
         Research<br>
         Columbia University<br>
         USA
     </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Thomas Rheineck</h4>
+        Observer<br>
         Industry<br>
         MR Instruments<br>
         USA
@@ -1055,24 +1083,28 @@
   <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Viola Rieke</h4>
+        Observer<br>
         Research<br>
         University of Utah<br>
         USA
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Vlad Miskovic</h4>
+        Observer<br>
         Industry<br>
         X Company<br>
         USA
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Walter Paulus</h4>
+        Observer<br>
         Research<br>
         University of Göttingen<br>
         Germany
     </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Wynn Legon</h4>
+        Observer<br>
         Industry<br>
         University of Virginia<br>
         USA
@@ -1082,24 +1114,28 @@
   <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Xinghao Cheng</h4>
+        Observer<br>
         Research<br>
         University of Oxford<br>
         UK
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Yasuo Terao</h4>
+        Observer<br>
         Research<br>
         Kyorin University<br>
         Japan
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Yeruham Shapira</h4>
+        Observer<br>
         Industry<br>
         Insightec<br>
         Israel
     </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Ying-Zu Huang</h4>
+        Observer<br>
         Research<br>
         Chang Gung University<br>
         Taiwan
@@ -1109,6 +1145,7 @@
   <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Zhihai Qiu</h4>
+        Observer<br>
         Research<br>
         Stanford University<br>
         USA
