--- a/iTrusst/content_people copy.html
+++ b/iTrusst/content_people copy.html
@@ -1,3 +1,23 @@
+<div class="row aln-center">
+  <div class="column"><a href="aboutus.html"><i style="margin-top:7px;" class="arrow left"></i></a></div>
+  <div class="column">
+
+<h3>Planning working group</h3>
+      </div>
+  <div class="column"><a href="aboutus.html"><i style="margin-top:7px;" class="arrow right"></i></a></div>
+    
+</div>
+
+<div class="row aln-center">
+    <a href="aboutus.html" class="buttonmenupeople">Reporting</a>
+    <a href="aboutus.html" class="buttonmenupeople">Safety</a>
+    <a href="aboutus.html" class="buttonmenupeople">Equipment</a>
+    <a href="aboutus.html" class="buttonmenupeople">Practice</a>
+    <a href="aboutus.html" class="buttonmenupeople">Open</a>
+    <a href="aboutus.html" class="buttonmenupeople">Clinical</a>
+    <a href="aboutus.html" class="buttonmenupeople">Observers</a>
+</div>
+
 <table id="customers" class="table-container fixed mostly-customized-scrollbar">
 
   <tr>
