--- a/iTrusst/content_people.html
+++ b/iTrusst/content_people.html
@@ -856,6 +856,13 @@
         USA
       </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
+        <h4>Harriet Lea-Banks </h4>
+        Observer<br>
+        Research<br>
+        Sunnybrook Research Institute<br>
+        Canada
+      </td>
+    <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Hermes Kamimura</h4>
         Observer<br>
         Research<br>
@@ -870,6 +877,9 @@
         Innovation, Ltd.<br>
         USA
     </td>
+ </tr>
+
+ <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Joel Segre</h4>
         Observer<br>
@@ -877,9 +887,6 @@
         X Company<br>
         USA
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>John Snell</h4>
         Observer<br>
@@ -901,6 +908,9 @@
         Rochester Institute of Technology<br>
         USA
     </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>José Pineda-Pardo</h4>
         Observer<br>
@@ -908,9 +918,6 @@
         hmCINAC<br>
         Spain
       </td>
-  </tr>
-    
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Josh Cain</h4>
         Observer<br>
@@ -932,6 +939,9 @@
         University of Nottingham<br>
         UK
     </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Markus Ulsberg</h4>
         Observer<br>
@@ -939,9 +949,13 @@
         Otto-von-Guericke University<br> Magdeburg<br>
         Germany
       </td>
-  </tr>
-    
-  <tr>
+     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
+        <h4>Mary Lee</h4>
+        Observer<br>
+        Research<br>
+        National Institutes of Health<br>
+        USA
+      </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Mathieu Sprengers</h4>
         Observer<br>
