--- a/iTrusst/content_people.html
+++ b/iTrusst/content_people.html
@@ -1,4 +1,5 @@
 <table id="customers" class="table-container fixed mostly-customized-scrollbar">
+<center><h3 style="color:#6a3297">Planning working group</h3></center>
 
   <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7"/><br>
