--- a/iTrusst/content_people.html
+++ b/iTrusst/content_people.html
@@ -725,6 +725,13 @@
         University of Toronto<br>
         Canada
       </td>
+     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
+        <h4>Anna Kuppuswamy</h4>
+        Observer<br>
+        Research<br>
+        University College London <br>
+        UK
+      </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Bruno Quesson</h4>
         Observer<br>
@@ -741,6 +748,9 @@
         University Magdeburg<br>
         Germany
       </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Carl Herickhoff</h4>
         Observer<br>
@@ -748,9 +758,6 @@
         The University of Memphis<br>
         USA
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Charles Caskey</h4>
         Observer<br>
@@ -775,6 +782,9 @@
         Columbia University<br>
         USA
     </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Cristina Pasquinelli</h4>
         Observer<br>
@@ -783,9 +793,6 @@
         for Magnetic Resonance<br>
         Denmark
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>David McMullen</h4>
         Observer<br>
@@ -809,6 +816,9 @@
         Ghent University<br>
         Belgium
     </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Dennis Parker</h4>
         Observer<br>
@@ -816,9 +826,6 @@
         The University of Utah<br>
         USA
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Elisa Konofagou</h4>
         Observer<br>
@@ -840,6 +847,9 @@
         Swiss Federal Institute of Technology<br>
         Switzerland
       </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Ethan Bendau</h4>
         Observer<br>
@@ -847,9 +857,6 @@
         Columbia University<br>
         USA
     </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Evelien Carrette</h4>
         Observer<br>
@@ -871,6 +878,9 @@
         Sunnybrook Research Institute<br>
         Canada
       </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Hermes Kamimura</h4>
         Observer<br>
@@ -878,9 +888,6 @@
         Columbia University<br>
         USA
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Jeff Keller</h4>
         Observer<br>
@@ -903,6 +910,9 @@
         Focused Ultrasound Foundation<br>
         USA
       </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>John Rothwell</h4>
         Observer<br>
@@ -910,9 +920,6 @@
         University College London<br>
         UK
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Jonathan Hacker</h4>
         Observer<br>
@@ -934,6 +941,9 @@
         University of California<br>
         USA
       </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Marc Fournelle</h4>
         Observer<br>
@@ -941,9 +951,6 @@
         The Fraunhofer Institute<br>
         Germany
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Marcus Kaiser</h4>
         Observer<br>
@@ -965,6 +972,9 @@
         National Institutes of Health<br>
         USA
       </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Mathieu Sprengers</h4>
         Observer<br>
@@ -972,9 +982,6 @@
         Ghent University<br>
         Belgium
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Mikhail Shapiro</h4>
         Observer<br>
@@ -997,6 +1004,9 @@
         Los Angeles<br>
         USA
       </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Olivier Le Baron</h4>
         Observer<br>
@@ -1004,9 +1014,6 @@
         Imasonic<br>
         France
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Philip Sabes</h4>
         Observer<br>
@@ -1029,6 +1036,9 @@
         Scientific Research<br>
         France
       </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Rob Mestrom</h4>
         Observer<br>
@@ -1037,9 +1047,6 @@
         of Technology<br>
         NL
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Ryan Jones</h4>
         Observer<br>
@@ -1062,6 +1069,9 @@
         for Biological Studies<br>
         USA
       </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Sjoerd Meijer</h4>
         Observer<br>
@@ -1070,9 +1080,6 @@
         Radboud University Nijmegen<br>
         NL
     </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Steffen Tretbar</h4>
         Observer<br>
@@ -1095,6 +1102,9 @@
         Columbia University<br>
         USA
     </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Thomas Rheineck</h4>
         Observer<br>
@@ -1102,9 +1112,6 @@
         MR Instruments<br>
         USA
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Viola Rieke</h4>
         Observer<br>
@@ -1126,6 +1133,9 @@
         University of Göttingen<br>
         Germany
     </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Wynn Legon</h4>
         Observer<br>
@@ -1133,9 +1143,6 @@
         University of Virginia<br>
         USA
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Xinghao Cheng</h4>
         Observer<br>
@@ -1157,6 +1164,9 @@
         Insightec<br>
         Israel
     </td>
+  </tr>
+
+  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Ying-Zu Huang</h4>
         Observer<br>
@@ -1164,9 +1174,6 @@
         Chang Gung University<br>
         Taiwan
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Zhihai Qiu</h4>
         Observer<br>
