--- a/iTrusst/content_meeting_march21.html
+++ b/iTrusst/content_meeting_march21.html
@@ -93,7 +93,7 @@
 
     <h3>Standardized Reporting Presentation (Kim Butts Pauly)</h3>
 <ul>
-    <li>What do we call our stimulus modality>
+    <li>What do we call our stimulus modality?
         <ul>
             <li>Pulse characteristics</li>
             <li>Spatial</li>
