--- a/iTrusst/content_meetingmins.html
+++ b/iTrusst/content_meetingmins.html
@@ -27,10 +27,10 @@
         <a href="meeting_feb22.html">* Recording February, 2022</a>
     </li>
     <li>
-        <a href="meeting_dec21.html">* Recording December, 2021</a>
+        <a href="meeting_dec21.html">* Minutes and recording December, 2021</a>
     </li>
     <li>
-        <a href="meeting_nov21.html">* Recording November, 2021</a>
+        <a href="meeting_nov21.html">* Minutes and recording November, 2021</a>
     </li>
     <li>
         <a href="meeting_june21.html">* Minutes and recording June, 2021</a>
