--- a/iTrusst/content_people.html
+++ b/iTrusst/content_people.html
@@ -888,6 +888,13 @@
         Columbia University<br>
         USA
       </td>
+     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
+        <h4>Izzy Kohler</h4>
+        Observer<br>
+        Industry<br>
+        Neurgear<br>
+        USA
+      </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Jeff Keller</h4>
         Observer<br>
@@ -903,17 +910,17 @@
         X Company<br>
         USA
       </td>
-    <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
+</tr>  
+  
+<tr>
+  <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>John Snell</h4>
         Observer<br>
         Research<br>
         Focused Ultrasound Foundation<br>
         USA
       </td>
-  </tr>
-
-  <tr>
-    <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
+  <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>John Rothwell</h4>
         Observer<br>
         Research<br>
@@ -934,6 +941,9 @@
         hmCINAC<br>
         Spain
       </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Josh Cain</h4>
         Observer<br>
@@ -941,9 +951,6 @@
         University of California<br>
         USA
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Marc Fournelle</h4>
         Observer<br>
@@ -965,6 +972,9 @@
         Otto-von-Guericke University<br> Magdeburg<br>
         Germany
       </td>
+</tr>  
+  
+<tr>
      <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Mary Lee</h4>
         Observer<br>
@@ -972,9 +982,6 @@
         National Institutes of Health<br>
         USA
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Mathieu Sprengers</h4>
         Observer<br>
@@ -996,6 +1003,9 @@
         Brown University<br>
         USA
     </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Norman Spivak</h4>
         Observer<br>
@@ -1004,9 +1014,6 @@
         Los Angeles<br>
         USA
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Olivier Le Baron</h4>
         Observer<br>
@@ -1028,6 +1035,9 @@
         Trinity College Dublin<br>
         Ireland
     </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Pierre Pouget</h4>
         Observer<br>
@@ -1036,9 +1046,6 @@
         Scientific Research<br>
         France
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Rob Mestrom</h4>
         Observer<br>
@@ -1061,6 +1068,9 @@
         Juntendo University<br>
         Japan
     </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Shrek Chalasani</h4>
         Observer<br>
@@ -1069,9 +1079,6 @@
         for Biological Studies<br>
         USA
       </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Sjoerd Meijer</h4>
         Observer<br>
@@ -1095,6 +1102,9 @@
         Focused Ultrasound Foundation<br>
         USA
       </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Tara Kugelman</h4>
         Observer<br>
@@ -1102,9 +1112,6 @@
         Columbia University<br>
         USA
     </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Thomas Rheineck</h4>
         Observer<br>
@@ -1126,6 +1133,9 @@
         X Company<br>
         USA
       </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Walter Paulus</h4>
         Observer<br>
@@ -1133,9 +1143,6 @@
         University of Göttingen<br>
         Germany
     </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Wynn Legon</h4>
         Observer<br>
@@ -1157,6 +1164,9 @@
         Kyorin University<br>
         Japan
       </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Yeruham Shapira</h4>
         Observer<br>
@@ -1164,9 +1174,6 @@
         Insightec<br>
         Israel
     </td>
-  </tr>
-
-  <tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Ying-Zu Huang</h4>
         Observer<br>
