--- a/iTrusst/content_people.html
+++ b/iTrusst/content_people.html
@@ -951,6 +951,14 @@
         University of California<br>
         USA
       </td>
+      <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
+        <h4>Julian Kosciessa</h4>
+        Observer<br>
+        Research<br>
+        Donders Institute,<br>
+        Radboud University Nijmegen<br>
+        NL
+      </td>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Marc Fournelle</h4>
         Observer<br>
@@ -965,6 +973,9 @@
         University of Nottingham<br>
         UK
     </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Markus Ulsberg</h4>
         Observer<br>
@@ -972,9 +983,6 @@
         Otto-von-Guericke University<br> Magdeburg<br>
         Germany
       </td>
-</tr>  
-  
-<tr>
      <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Mary Lee</h4>
         Observer<br>
@@ -996,6 +1004,9 @@
         Caltech University<br>
         USA
       </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Noah Philip</h4>
         Observer<br>
@@ -1003,9 +1014,6 @@
         Brown University<br>
         USA
     </td>
-</tr>  
-  
-<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Norman Spivak</h4>
         Observer<br>
@@ -1028,6 +1036,9 @@
         Neuralink<br>
         USA
       </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Peter Murphy</h4>
         Observer<br>
@@ -1035,9 +1046,6 @@
         Trinity College Dublin<br>
         Ireland
     </td>
-</tr>  
-  
-<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Pierre Pouget</h4>
         Observer<br>
@@ -1054,6 +1062,16 @@
         of Technology<br>
         NL
       </td>
+      <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
+        <h4>Roland Beisteiner</h4>
+        Observer<br>
+        Research<br>
+        Medical University of Vienna<br>
+        Austria
+      </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Ryan Jones</h4>
         Observer<br>
@@ -1068,9 +1086,6 @@
         Juntendo University<br>
         Japan
     </td>
-</tr>  
-  
-<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Shrek Chalasani</h4>
         Observer<br>
@@ -1087,6 +1102,9 @@
         Radboud University Nijmegen<br>
         NL
     </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Steffen Tretbar</h4>
         Observer<br>
@@ -1102,9 +1120,6 @@
         Focused Ultrasound Foundation<br>
         USA
       </td>
-</tr>  
-  
-<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Tara Kugelman</h4>
         Observer<br>
@@ -1119,6 +1134,9 @@
         MR Instruments<br>
         USA
       </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Viola Rieke</h4>
         Observer<br>
@@ -1133,9 +1151,6 @@
         X Company<br>
         USA
       </td>
-</tr>  
-  
-<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Walter Paulus</h4>
         Observer<br>
@@ -1150,6 +1165,9 @@
         University of Virginia<br>
         USA
       </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Xinghao Cheng</h4>
         Observer<br>
@@ -1164,9 +1182,6 @@
         Kyorin University<br>
         Japan
       </td>
-</tr>  
-  
-<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Yeruham Shapira</h4>
         Observer<br>
@@ -1181,6 +1196,9 @@
         Chang Gung University<br>
         Taiwan
       </td>
+</tr>  
+  
+<tr>
     <td><img class="portimg" src="people/logo_itrusst.png" style = "opacity:0.7" /><br>
         <h4>Zhihai Qiu</h4>
         Observer<br>
